// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationIcon - Snapshots > matches snapshot for Follow notification with badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user-round-plus text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 21a8 8 0 0 1 13.292-6"
    />
    <circle
      cx="10"
      cy="8"
      r="5"
    />
    <path
      d="M19 16v6"
    />
    <path
      d="M22 19h-6"
    />
  </svg>
  <div
    class="absolute right-0 bottom-0 rounded-full bg-brand"
    data-override="true"
    data-testid="container"
    style="width: 11px; height: 11px;"
  />
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for Follow notification without badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-user-round-plus text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 21a8 8 0 0 1 13.292-6"
    />
    <circle
      cx="10"
      cy="8"
      r="5"
    />
    <path
      d="M19 16v6"
    />
    <path
      d="M22 19h-6"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for Mention notification without badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-at-sign text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="4"
    />
    <path
      d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-4 8"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for NewFriend notification without badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-heart-handshake text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.414 14.414C21 12.828 22 11.5 22 9.5a5.5 5.5 0 0 0-9.591-3.676.6.6 0 0 1-.818.001A5.5 5.5 0 0 0 2 9.5c0 2.3 1.5 4 3 5.5l5.535 5.362a2 2 0 0 0 2.879.052 2.12 2.12 0 0 0-.004-3 2.124 2.124 0 1 0 3-3 2.124 2.124 0 0 0 3.004 0 2 2 0 0 0 0-2.828l-1.881-1.882a2.41 2.41 0 0 0-3.409 0l-1.71 1.71a2 2 0 0 1-2.828 0 2 2 0 0 1 0-2.828l2.823-2.762"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for PostDeleted notification without badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-trash2 lucide-trash-2 text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 11v6"
    />
    <path
      d="M14 11v6"
    />
    <path
      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
    />
    <path
      d="M3 6h18"
    />
    <path
      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for PostEdited notification without badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-sticky-note text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
    />
    <path
      d="M15 3v5a1 1 0 0 0 1 1h5"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for Reply notification without badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-message-circle text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for Repost notification without badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-repeat text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m17 2 4 4-4 4"
    />
    <path
      d="M3 11v-1a4 4 0 0 1 4-4h14"
    />
    <path
      d="m7 22-4-4 4-4"
    />
    <path
      d="M21 13v1a4 4 0 0 1-4 4H3"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for TagPost notification without badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-tag text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
    />
    <circle
      cx="7.5"
      cy="7.5"
      fill="currentColor"
      r=".5"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for TagProfile notification without badge 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-tag text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
    />
    <circle
      cx="7.5"
      cy="7.5"
      fill="currentColor"
      r=".5"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for an edited collection notification 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-library text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m16 6 4 14"
    />
    <path
      d="M12 6v14"
    />
    <path
      d="M8 8v12"
    />
    <path
      d="M4 4v16"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for an edited file notification 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-download text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 15V3"
    />
    <path
      d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
    />
    <path
      d="m7 10 5 5 5-5"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for an edited image notification 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-image text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      ry="2"
      width="18"
      x="3"
      y="3"
    />
    <circle
      cx="9"
      cy="9"
      r="2"
    />
    <path
      d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for an edited link notification 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-link text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
    />
    <path
      d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for an edited long notification 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-newspaper text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 18h-5"
    />
    <path
      d="M18 14h-8"
    />
    <path
      d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
    />
    <rect
      height="4"
      rx="1"
      width="8"
      x="10"
      y="6"
    />
  </svg>
</div>
`;

exports[`NotificationIcon - Snapshots > matches snapshot for an edited video notification 1`] = `
<div
  class="relative shrink-0"
  data-override="true"
  data-testid="container"
  style="width: 24px; height: 24px;"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-play text-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 9.003a1 1 0 0 1 1.517-.859l4.997 2.997a1 1 0 0 1 0 1.718l-4.997 2.997A1 1 0 0 1 9 14.996z"
    />
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
</div>
`;
